jitsi_aks/jibri-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jibri
  name: jibri
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jibri
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jibri
    spec:
      containers:
        - image: jitsi/jibri:stable-5870
          name: jibri
          ports:
            - containerPort: 80
            - containerPort: 443
          ports:
            - containerPort: 2222
            - containerPort: 3333
      restartPolicy: Always
