jitsi_aks/jicofo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jicofo
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      containers:
        - image: jitsi/jicofo:stable-5963
          name: jicofo
          ports:
            - containerPort: 8888
      restartPolicy: Always
