jitsi_aks/jvb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jvb
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
        - image: jitsi/jvb:stable-5870
          name: jvb
          ports:
            - containerPort: 30300
              protocol: UDP
            - containerPort: 30443
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
      restartPolicy: Always
