jitsi_aks/jibri-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jibri
  labels:
    app: jibri
  namespace: jitsi
spec:
  selector:
    app: jibri
  ports:
  - name: "port-2222"
    port: 2222
    targetPort: 2222
  - name: "port-3333"
    port: 3333
    targetPort: 3333
