jitsi_aks/jicofo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jicofo
  namespace: jitsi
spec:
  selector:
    app: jicofo
  ports:
    - port: 8888
      targetPort: 8888
      name: "port-8888"
  type: ClusterIP
