jitsi_aks/jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvb
  name: jvb
  namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    app: jvb
  ports:
  - name: "30300"
    port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30300
  - name: "30443"
    port: 30443
    protocol: TCP
    nodePort: 30443
    targetPort: 30443
