jitsi_aks/jvb-wss-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jvbwss
  name: jvbwss
  namespace: jitsi
spec:
  selector:
    app: jvb
  ports:
  - name: "9090"
    port: 9090
    protocol: TCP
    targetPort: 9090
