jitsi_aks/prosody-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: jitsi
spec:
  type: ClusterIP
  selector:
    app: prosody
  ports:
  - name: "port-5222"
    port: 5222
    targetPort: 5222
  - name: "port-5269"
    port: 5269
    targetPort: 5269
  - name: "port-5280"
    port: 5280
    targetPort: 5280
  - name: "port-5347"
    port: 5347
    targetPort: 5347
