jitsi_aks/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jitsi
spec:
  selector:
    app: web
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
